--- a/thesis_various_scripting.ipynb
+++ b/thesis_various_scripting.ipynb
@@ -1169,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1182,13 +1182,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Entità: ()\n"
+            "Entità: LOC\n"
           ]
         }
       ],
       "source": [
-        "doc = nlp('il pesce è ottimo')\n",
-        "print('Entità:', doc.ents)\n",
+        "doc = nlp('ntt è un azienda di consulenza')\n",
+        "print('Entità:', doc.ents[0].ents[0].label_)\n",
         "\n"
       ]
     },
@@ -1540,6 +1540,13 @@
         "        summary_ids = model.generate(inputs['input_ids'], max_length=100, early_stopping=False)\n",
         "        print([tokenizer.decode(g, skip_special_tokens=True) for g in summary_ids])\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
