--- a/thesis_various_scripting.ipynb
+++ b/thesis_various_scripting.ipynb
@@ -998,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "metadata": {
         "id": "4fW3RV313VfR"
       },
@@ -1009,7 +1009,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting Quart-Schema\n",
+            "  Obtaining dependency information for Quart-Schema from https://files.pythonhosted.org/packages/59/3a/d6d2812ff6b8858a971e62c8f0296aa50b08d15e159441c585704d448163/quart_schema-0.18.0-py3-none-any.whl.metadata\n",
+            "  Downloading quart_schema-0.18.0-py3-none-any.whl.metadata (4.7 kB)\n",
+            "Requirement already satisfied: pydantic>=2 in .\\.venv\\lib\\site-packages (from Quart-Schema) (2.5.3)\n",
+            "Collecting pyhumps>=1.6.1 (from Quart-Schema)\n",
+            "  Downloading pyhumps-3.8.0-py3-none-any.whl (6.1 kB)\n",
+            "Requirement already satisfied: quart>=0.19.0 in .\\.venv\\lib\\site-packages (from Quart-Schema) (0.19.4)\n",
+            "Requirement already satisfied: annotated-types>=0.4.0 in .\\.venv\\lib\\site-packages (from pydantic>=2->Quart-Schema) (0.6.0)\n",
+            "Requirement already satisfied: pydantic-core==2.14.6 in .\\.venv\\lib\\site-packages (from pydantic>=2->Quart-Schema) (2.14.6)\n",
+            "Requirement already satisfied: typing-extensions>=4.6.1 in .\\.venv\\lib\\site-packages (from pydantic>=2->Quart-Schema) (4.9.0)\n",
+            "Requirement already satisfied: aiofiles in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (23.2.1)\n",
+            "Requirement already satisfied: blinker>=1.6 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (1.7.0)\n",
+            "Requirement already satisfied: click>=8.0.0 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (8.1.7)\n",
+            "Requirement already satisfied: flask>=3.0.0 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (3.0.0)\n",
+            "Requirement already satisfied: hypercorn>=0.11.2 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (0.15.0)\n",
+            "Requirement already satisfied: itsdangerous in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (2.1.2)\n",
+            "Requirement already satisfied: jinja2 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (3.1.2)\n",
+            "Requirement already satisfied: markupsafe in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (2.1.3)\n",
+            "Requirement already satisfied: werkzeug>=3.0.0 in .\\.venv\\lib\\site-packages (from quart>=0.19.0->Quart-Schema) (3.0.1)\n",
+            "Requirement already satisfied: colorama in .\\.venv\\lib\\site-packages (from click>=8.0.0->quart>=0.19.0->Quart-Schema) (0.4.6)\n",
+            "Requirement already satisfied: h11 in .\\.venv\\lib\\site-packages (from hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (0.14.0)\n",
+            "Requirement already satisfied: h2>=3.1.0 in .\\.venv\\lib\\site-packages (from hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (4.1.0)\n",
+            "Requirement already satisfied: priority in .\\.venv\\lib\\site-packages (from hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (2.0.0)\n",
+            "Requirement already satisfied: wsproto>=0.14.0 in .\\.venv\\lib\\site-packages (from hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (1.2.0)\n",
+            "Requirement already satisfied: hyperframe<7,>=6.0 in .\\.venv\\lib\\site-packages (from h2>=3.1.0->hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (6.0.1)\n",
+            "Requirement already satisfied: hpack<5,>=4.0 in .\\.venv\\lib\\site-packages (from h2>=3.1.0->hypercorn>=0.11.2->quart>=0.19.0->Quart-Schema) (4.0.0)\n",
+            "Downloading quart_schema-0.18.0-py3-none-any.whl (17 kB)\n",
+            "Installing collected packages: pyhumps, Quart-Schema\n",
+            "Successfully installed Quart-Schema-0.18.0 pyhumps-3.8.0\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.2.1 -> 23.3.2\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+          ]
+        }
+      ],
+      "source": [
+        "! pip install Quart-Schema"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1064,7 +1118,16 @@
         "id": "sADMi1F3OZfo",
         "outputId": "53b6dfec-0c34-4da4-9dd0-ef59c647f4c2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\source\\private\\thesis-summarization\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "# spiegazione di come funziona https://www.youtube.com/watch?v=fgmA9am9qCo&ab_channel=ASLearning\n",
         "\n",
@@ -1169,7 +1232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1182,14 +1245,23 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Entità: LOC\n"
+            "Entità: ORG\n",
+            "1\n",
+            "383\n",
+            "0\n",
+            "Apple\n"
           ]
         }
       ],
       "source": [
-        "doc = nlp('ntt è un azienda di consulenza')\n",
+        "doc = nlp('Apple è un azienda di informatica')\n",
         "print('Entità:', doc.ents[0].ents[0].label_)\n",
-        "\n"
+        "\n",
+        "for ent in doc.ents:\n",
+        "        print(ent.end)\n",
+        "        print(ent.ents[0].label_)\n",
+        "        print(ent.start)\n",
+        "        print(ent.text)"
       ]
     },
     {
